feat: rename content module to ingest module and move inside connector module
